Add multimode interview demo UI
